Added a .jar and updated the README.md. Plus some minor refactors to texture and shader classes to support the .jar packaging.